Resolved 4 bugs :)